fix: Make preview button fixed width so there's no layout shift.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -135,6 +135,10 @@ button.del {
     padding: 6px 8px;
 }
 
+button.play-stop {
+    width: 50px;
+}
+
 .row input[type="range"] {
     -webkit-appearance: none;
     appearance: none;
